--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     </div>
 
     <div id="app-mode-gestion" class="hidden">
+        
         <div class="v8-header-user">
             <div>
                 <div class="v8-user-info" id="v8-userDisplay">...</div>
@@ -31,14 +32,20 @@
             </div>
 
             <div style="display:flex; gap:8px; align-items:center;">
-                <button id="v8-admin-lector-toggle" class="btn-logout-pill hidden" onclick="v8_entrarModoLector()">
-                    <span class="material-icons-round" style="font-size:16px">swap_horiz</span> LECTOR
-                </button>
-
                 <button class="btn-logout-pill" onclick="cerrarSesion()">
                     <span class="material-icons-round" style="font-size:16px">logout</span> SALIR
                 </button>
             </div>
+        </div>
+
+        <div id="v8-admin-buttons" class="v8-admin-row hidden">
+            <button class="v8-btn-admin action-import" onclick="window.location.href='admin.html'">
+                <span class="material-icons-round">cloud_upload</span> IMPORTAR
+            </button>
+            
+            <button class="v8-btn-admin action-lector" onclick="v8_entrarModoLector()">
+                <span class="material-icons-round">qr_code_scanner</span> LECTOR
+            </button>
         </div>
 
         <div class="v8-prov-control">
@@ -94,8 +101,7 @@
                 <div class="v8-right-actions">
                     <button class="v8-btn-contact whatsapp" onclick="v8_compartir('whatsapp')">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                            <path
-                                d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21 5.46 0 9.91-4.45 9.91-9.91 0-2.65-1.03-5.14-2.9-7.01A9.816 9.816 0 0 0 12.04 2m.01 1.67c2.2 0 4.26.86 5.82 2.42a8.225 8.225 0 0 1 2.41 5.83c0 4.54-3.7 8.23-8.24 8.23-1.48 0-2.93-.39-4.19-1.15l-.3-.17-3.12.82.83-3.04-.2-.32a8.188 8.188 0 0 1-1.26-4.38c0-4.54 3.7-8.24 8.25-8.24m4.52 10.2c-.19-.09-1.1-.54-1.27-.61-.17-.05-.29-.09-.4.09s-.42.54-.51.65-.19.13-.37.05a4.767 4.767 0 0 1-2.37-1.47 5.26 5.26 0 0 1-1.64-2.03c-.17-.29-.03-.44.07-.53.08-.09.19-.22.28-.33.09-.11.12-.19.18-.31.06-.12.03-.23-.01-.32-.05-.09-.41-.98-.56-1.35-.14-.36-.3-.32-.4-.32h-.35c-.12 0-.32.05-.49.23-.17.19-.64.63-.64 1.53 0 .91.66 1.78.75 1.91.09.13 1.29 1.97 3.13 2.76 1.84.79 1.84.53 2.17.49.33-.04 1.09-.45 1.25-.88.15-.43.15-.81.11-.88-.05-.07-.17-.11-.36-.2z" />
+                            <path d="M12.04 2c-5.46 0-9.91 4.45-9.91 9.91 0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21 5.46 0 9.91-4.45 9.91-9.91 0-2.65-1.03-5.14-2.9-7.01A9.816 9.816 0 0 0 12.04 2m.01 1.67c2.2 0 4.26.86 5.82 2.42a8.225 8.225 0 0 1 2.41 5.83c0 4.54-3.7 8.23-8.24 8.23-1.48 0-2.93-.39-4.19-1.15l-.3-.17-3.12.82.83-3.04-.2-.32a8.188 8.188 0 0 1-1.26-4.38c0-4.54 3.7-8.24 8.25-8.24m4.52 10.2c-.19-.09-1.1-.54-1.27-.61-.17-.05-.29-.09-.4.09s-.42.54-.51.65-.19.13-.37.05a4.767 4.767 0 0 1-2.37-1.47 5.26 5.26 0 0 1-1.64-2.03c-.17-.29-.03-.44.07-.53.08-.09.19-.22.28-.33.09-.11.12-.19.18-.31.06-.12.03-.23-.01-.32-.05-.09-.41-.98-.56-1.35-.14-.36-.3-.32-.4-.32h-.35c-.12 0-.32.05-.49.23-.17.19-.64.63-.64 1.53 0 .91.66 1.78.75 1.91.09.13 1.29 1.97 3.13 2.76 1.84.79 1.84.53 2.17.49.33-.04 1.09-.45 1.25-.88.15-.43.15-.81.11-.88-.05-.07-.17-.11-.36-.2z" />
                         </svg>
                     </button>
                     <button class="v8-btn-contact email" onclick="v8_compartir('email')">
