--- a/public/admin.html
+++ b/public/admin.html
@@ -12,9 +12,15 @@
         h1, h2 { margin-top: 0; color: #007bff; }
         h2 { font-size: 18px; margin-top: 30px; border-bottom: 2px solid #eee; padding-bottom: 10px; margin-bottom: 15px; }
         label { font-weight: 600; display: block; margin-top: 15px; margin-bottom: 5px; font-size: 13px; color: #555; }
-        input, textarea, select { width: 100%; padding: 12px; border: 1px solid #dee2e6; border-radius: 8px; box-sizing: border-box; font-size: 13px; font-family: inherit; }
-        textarea { height: 150px; white-space: pre; overflow-x: auto; font-family: monospace; }
+        input[type="text"], input[type="number"], textarea, select { width: 100%; padding: 12px; border: 1px solid #dee2e6; border-radius: 8px; box-sizing: border-box; font-size: 13px; font-family: inherit; }
+        textarea { height: 100px; white-space: pre; overflow-x: auto; font-family: monospace; }
         
+        /* ESTILO NUEVO PARA EL BOTÓN DE SUBIR ARCHIVO */
+        input[type="file"] {
+            background: #f8f9fa; padding: 15px; border: 2px dashed #dee2e6; border-radius: 8px; width: 100%; box-sizing: border-box; cursor: pointer;
+        }
+        input[type="file"]:hover { background: #e9ecef; border-color: #007bff; }
+
         .btn-green { background: #28a745; color: white; border: none; padding: 15px; width: 100%; border-radius: 8px; font-size: 16px; font-weight: 700; cursor: pointer; margin-top: 20px; }
         .btn-blue { background: #007bff; color: white; border: none; padding: 15px; width: 100%; border-radius: 8px; font-size: 16px; font-weight: 700; cursor: pointer; margin-top: 20px; }
         button:disabled { background: #e9ecef; color: #adb5bd; cursor: not-allowed; }
@@ -39,11 +45,18 @@
     </div>
 
     <div class="tips">
-        <strong>Opción A: Carga Masiva (Pegar Excel/CSV)</strong><br>
-        El sistema detecta automáticamente los proveedores si la línea tiene solo el nombre en la primera columna.<br>
+        <strong>Opción A: Carga Masiva (Archivo CSV)</strong><br>
+        Sube tu archivo .csv o pega el contenido abajo. El sistema detecta automáticamente los proveedores.<br>
         Formato: <code>Nombre, Cantidad, Unidad, Responsable, Categoría, Precio</code>
     </div>
+
+    <label>1. Subir Archivo .CSV</label>
+    <input type="file" id="fileUpload" accept=".csv, .txt">
+
+    <div style="text-align:center; margin: 10px 0; font-size:12px; color:#999">- O PEGA EL CONTENIDO -</div>
+
     <textarea id="csvData" placeholder="Mercadona,,,,,&#10;Tomates,5,kg,Cocina,Verdura,2.50"></textarea>
+    
     <button onclick="procesarImportacion()" id="btnImport" class="btn-green" disabled>⏳ Cargando...</button>
     <div id="status" class="status"></div>
 
@@ -65,13 +78,11 @@
             <input type="text" id="mUnidad" placeholder="Unidad (Caja, Kg...)">
             <input type="text" id="mCategoria" placeholder="Categoría">
             <select id="mResponsable">
-                <option value="Todos">Resp: Todos</option>
-                <option value="Cocina">Cocina</option>
-                <option value="Barra">Barra</option>
+                <option value="Jazmín">Jazmín</option>
                 <option value="Flor">Flor</option>
                 <option value="Jose">Jose</option>
                 <option value="Amina">Amina</option>
-                <option value="Jazmín y Aarón">Jazmín y Aarón</option>
+                <option value="Aaron">Aaron</option>
                 <option value="Jhoan">Jhoan</option>
             </select>
         </div>
